# pysql

./: .gitignore  README.md  README.rst  pyproject.toml  setup.cfg
pysql/: __init__.py  column.py  constraints.py  core.py  errors.py  model.py  query.py  schema.py  session.py  statement.py  table.py  types.py
src/pysql/: __init__.py  column.py  constraint.py  core.py  data_type.py  errors.py  model.py  statement.py  table.py
