[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysql"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2.9",
]

[tool.setuptools.package-data]
"pysql" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
