[metadata]
name = PySQL
version = attr:pysql.__version__
description = An object-relational mapper (ORM) for SQL databases.
long_description = file: README.md
keywords = python, database, sql, orm
license = Apache Software License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: SQL
    Topic :: Database
    Topic :: Utilities

[options]
packages = find:
requires =
    file: requirements.txt

[options.packages.find]
exclude =
    build*
    docs*
    examples*
    tests*
